<resources>
    <string name="AUTO">Auto</string>
    <string name="Abb_AUTO">Auto</string>
    <string name="Abb_COLOR_TONE_NONE">Standard</string>
    <string name="Abb_COLOR_TUNE_BREEZE">Breezy</string>
    <string name="Abb_COLOR_TUNE_NOSTALGIA">Nostalgic</string>
    <string name="Abb_COLOR_TUNE_PRESET">Tone %d</string>
    <string name="Abb_COLOR_TUNE_SERENE">Serene</string>
    <string name="Abb_COLOR_TUNE_SOFT">Soft</string>
    <string name="Abb_COLOR_TUNE_VIVID">Vivid</string>
    <string name="Abb_Contrast">Contrast</string>
    <string name="Abb_Highlight">Highlight</string>
    <string name="Abb_Saturation">Saturation</string>
    <string name="Abb_Shadow">Shadow</string>
    <string name="Abb_Temperature">Temperature</string>
    <string name="Abb_Tint">Tint</string>
    <string name="Abb_Title_Effects">Effects</string>
    <string name="Abb_Title_ExposureValue">Exposure value</string>
    <string name="Abb_Title_Flash">Flash</string>
    <string name="Abb_Title_GPS">Location tags</string>
    <string name="Abb_Title_Guideline">Grid lines</string>
    <string name="Abb_Title_HDR">"HDR
(Rich tone)"</string>
    <string name="Abb_Title_ISO">ISO</string>
    <string name="Abb_Title_Manual_Focus">Manual focus</string>
    <string name="Abb_Title_Metering">Metering modes</string>
    <string name="Abb_Title_More_Settings">More settings</string>
    <string name="Abb_Title_SaveAsFlipped">Save pictures as previewed</string>
    <string name="Abb_Title_ShutterSound">Shutter sound</string>
    <string name="Abb_Title_Storage">Storage location</string>
    <string name="Abb_Title_VideoStabilisation">"Video
stabilisation"</string>
    <string name="Abb_Title_VoiceCapture">Voice control</string>
    <string name="Abb_Title_WhiteBalance">White balance</string>
    <string name="AnimatedGif_Helptext">Tap and hold the Camera button to take pictures continuously.</string>
    <string name="COLOR_TONE_EDIT">Edit colour tone</string>
    <string name="COLOR_TONE_NONE">Standard</string>
    <string name="COLOR_TUNE_BREEZE">Breezy</string>
    <string name="COLOR_TUNE_NOSTALGIA">Nostalgic</string>
    <string name="COLOR_TUNE_PRESET">Tone %d</string>
    <string name="COLOR_TUNE_SERENE">Serene</string>
    <string name="COLOR_TUNE_SOFT">Soft</string>
    <string name="COLOR_TUNE_VIVID">Vivid</string>
    <string name="EFFECT_STRENGTH">Strength</string>
    <string name="EFFECT_VIGNETTE">Vignette</string>
    <string name="ER_EFFECT_NOEFFECT">No effect</string>
    <string name="EXT_DOWNLOAD">Download</string>
    <string name="E_BW">Grey-scale</string>
    <string name="E_CIRCLELENS">Fisheye</string>
    <string name="E_CUBISM">Cubism</string>
    <string name="E_FLIP_PHOTO">Flip</string>
    <string name="E_HEART">Heart shape</string>
    <string name="E_NEGATIVE">Negative</string>
    <string name="E_OVAL_BLUR">Oval blur</string>
    <string name="E_POINT_BLUE">Blue</string>
    <string name="E_POINT_RED_YELLOW">Red/Yellow</string>
    <string name="E_POLAROID">Instant pic</string>
    <string name="E_POSTCARD">Stamp</string>
    <string name="E_POSTERIZE">Posterise</string>
    <string name="E_SEPIA">Sepia</string>
    <string name="E_SOLARIZE">Solarise</string>
    <string name="E_SPLIT_VIEW">Split</string>
    <string name="E_VINTAGE">Vintage</string>
    <string name="E_WINDOW">Window</string>
    <string name="F_AUTOFOCUS">Auto focus</string>
    <string name="F_AUTO_FLASH">Auto</string>
    <string name="F_FACE">Face detection</string>
    <string name="F_MACRO">Macro</string>
    <string name="F_MANUALFOCUS">Manual focus</string>
    <string name="INFINITY_INDICATOR">Far distance</string>
    <string name="MACRO_INDICATOR">Close-up</string>
    <string name="MF_OFF">Auto</string>
    <string name="MF_ON">Manual</string>
    <string name="MODE">Mode</string>
    <string name="M_CENTER_WEIGHTED">Centre-weighted</string>
    <string name="M_MATRIX">Matrix</string>
    <string name="M_SPOT">Spot</string>
    <string name="MultiFrame_Helptext">Hold the device steady while taking pictures.</string>
    <string name="OPTION_OFF">Off</string>
    <string name="OPTION_ON">On</string>
    <string name="RESOLUTION_SUB_TTS">Resolution %1$d by %2$d</string>
    <string name="RMS_X16">16x</string>
    <string name="RMS_X16_TTS">Sixteen times faster</string>
    <string name="RMS_X32">32x</string>
    <string name="RMS_X32_TTS">Thirty two times faster</string>
    <string name="RMS_X4">4x</string>
    <string name="RMS_X4_TTS">Four times faster</string>
    <string name="RMS_X8">8x</string>
    <string name="RMS_X8_TTS">Eight times faster</string>
    <string name="R_1072x1072">1:1 (1.1 M)</string>
    <string name="R_1280x720">16:9 (0.9 M)</string>
    <string name="R_1280x960">4:3 (1.2 M)</string>
    <string name="R_1440x1080">4:3 (1.6 M)</string>
    <string name="R_1536x1536">1:1 (2.4 M)</string>
    <string name="R_1600x1200">4:3 (2.0 M)</string>
    <string name="R_1600x900">16:9 (1.4 M)</string>
    <string name="R_1616x1212">4:3 (2.0 M)</string>
    <string name="R_1920x1080">16:9 (2.1 M)</string>
    <string name="R_1920x1920">1:1 (3.7 M)</string>
    <string name="R_1936x1936">1:1 (3.7 M)</string>
    <string name="R_2048x1152">16:9 (2.4 M)</string>
    <string name="R_2048x1536">4:3 (3.1 M)</string>
    <string name="R_2160x2160">1:1 (4.7 M)</string>
    <string name="R_2448x2448">1:1 (6.0 M)</string>
    <string name="R_2560x1440">16:9 (3.7 M)</string>
    <string name="R_2560x1920">4:3 (5.0 M)</string>
    <string name="R_2576x1932">4:3 (5.0 M)</string>
    <string name="R_2592x1458">16:9 (3.8 M)</string>
    <string name="R_2592x1944">4:3 (5.0 M)</string>
    <string name="R_2880x2160">4:3 (6.2 M)</string>
    <string name="R_2976x2976">1:1 (8.9 M)</string>
    <string name="R_3024x3024">1:1 (9.1 M)</string>
    <string name="R_3088x3088">1:1 (9.5 M)</string>
    <string name="R_3264x1836">16:9 (6.0 M)</string>
    <string name="R_3264x2448">4:3 (8.0 M)</string>
    <string name="R_3344x3344">1:1 (11 M)</string>
    <string name="R_3456x3456">1:1 (12 M)</string>
    <string name="R_3984x2988">4:3 (12 M)</string>
    <string name="R_4032x2268">16:9 (9.1 M)</string>
    <string name="R_4032x3024">4:3 (12 M)</string>
    <string name="R_4128x2322">16:9 (9.6 M)</string>
    <string name="R_4128x3096">4:3 (13 M)</string>
    <string name="R_4608x2592">16:9 (12 M)</string>
    <string name="R_4608x3456">4:3 (16 M)</string>
    <string name="R_5312x2988">16:9 (16 M)</string>
    <string name="R_640x480">4:3 (0.3 M)</string>
    <string name="R_MOVIE_1440x1440">1:1</string>
    <string name="R_MOVIE_1920x1080_60FPS">FHD (60 fps)</string>
    <string name="Resolution_Ratio_16_9_TTS">Ratio 16 by 9, %1$s megapixels, resolution %2$d by %3$d</string>
    <string name="Resolution_Ratio_1_1_TTS">Ratio one by one, %1$s megapixels, resolution %2$d by %3$d</string>
    <string name="Resolution_Ratio_4_3_TTS">Ratio 4 by 3, %1$s megapixels, resolution %2$d by %3$d</string>
    <string name="SEEK_CONTROL">Seek control</string>
    <string name="SM_ANIMATEDGIF">Animated GIF</string>
    <string name="SM_ANIMATEDGIF_description">Create animated images by taking pictures continuously.</string>
    <string name="SM_ANTI_FOG">Anti-fog</string>
    <string name="SM_ANTI_FOG_DISABLE">Unable to take pictures in Anti-fog mode. Not enough light.</string>
    <string name="SM_ANTI_FOG_description">Automatically corrects pictures for fog when taking them in the mist.</string>
    <string name="SM_AQUA">Aqua</string>
    <string name="SM_AQUA_description">Appropriate for taking pictures underwater.</string>
    <string name="Title_CamcorderResolution">Video size</string>
    <string name="Title_CameraResolution">Picture size</string>
    <string name="Title_Contact_us">Contact us</string>
    <string name="Title_FloatingCameraButton">Floating Camera button</string>
    <string name="Title_FocusMode">Focus mode</string>
    <string name="Title_GPS">Location tags</string>
    <string name="Title_GestureControl">Gesture control</string>
    <string name="Title_Guideline">Grid lines</string>
    <string name="Title_HRM_shutter">Use heart rate sensor</string>
    <string name="Title_MotionPhoto">Motion photo</string>
    <string name="Title_QRCode">Detect QR codes</string>
    <string name="Title_QuickShot">Quick launch</string>
    <string name="Title_Review">Review pictures</string>
    <string name="Title_SaveAsFlipped">Save pictures as previewed</string>
    <string name="Title_Shooting_Method">Ways to take pictures</string>
    <string name="Title_ShutterSound">Shutter sound</string>
    <string name="Title_Storage">Storage location</string>
    <string name="Title_Tap_To_Take_Pictures">Tap to take pictures</string>
    <string name="Title_Timer">Timer</string>
    <string name="Title_TrackingAF">Tracking AF</string>
    <string name="Title_VideoStabilisation">Video stabilisation</string>
    <string name="Title_Viewmode">Full screen view (16:9)</string>
    <string name="Title_Voice_Capture">Voice control</string>
    <string name="Title_Volume_Key_As">Volume keys function</string>
    <string name="Title_common">Common</string>
    <string name="Title_front">Front camera</string>
    <string name="Title_rear">Rear camera</string>
    <string name="Title_rear_lens_distortion_correction">Shape correction</string>
    <string name="camera_label">Camera</string>
    <string name="gesture_control_summary">Hold your hand out with your palm facing the camera to have your picture taken after a few seconds.</string>
    <string name="help_change_mode_tip_1">Swipe right to view available camera modes.</string>
    <string name="help_change_mode_tip_2">Select the mode that you want to use.</string>
    <string name="help_changing_the_camera_mode">Selecting camera modes</string>
    <string name="help_recording_videos">Recording videos</string>
    <string name="help_recording_videos_tip_1">Tap %s.</string>
    <string name="help_recording_videos_tip_1_tts">Tap the camcorder button.</string>
    <string name="help_recording_videos_tip_2">Tap %s to stop recording.</string>
    <string name="help_recording_videos_tip_2_tts">Tap the stop button to stop recording.</string>
    <string name="help_recording_videos_tip_snapshot">Tap %s to take pictures while recording video.</string>
    <string name="help_recording_videos_tip_snapshot_tts">Tap the camera button to take pictures while recording video.</string>
    <string name="help_section_summary">Take pictures or record videos using a variety of different effects, to suit all occasions.</string>
    <string name="help_selecting_camera_mode">Selecting camera modes</string>
    <string name="help_taking_pictures">Taking pictures</string>
    <string name="help_text_more_info">More info</string>
    <string name="help_viewing_pictures_and_videos">Viewing pictures and videos</string>
    <string name="hrm_shutter_summary">Tap the heart rate sensor to take a selfie once your face has been recognised.</string>
    <string name="location_tag_summary">Attach, embed, and store geographical location data within each picture and video.</string>
    <string name="motion_photo_summary">Record a short video clip of what happens before each picture is taken.</string>
    <string name="rear_lens_distortion_correction_summary">Correct distortion in pictures automatically.</string>
    <string name="reset_title">Reset settings</string>
    <string name="save_as_flipped_summary">Save all pictures you take as shown in the preview, not as flipped images.</string>
    <string name="tap_to_take_pictures_summary">Tap the screen to take selfies easily.</string>
    <string name="tracking_af_summary">Focus on and track a subject selected on the preview screen.</string>
    <string name="viewmode_tag_summary">Preview pictures and videos using the full screen.</string>
    <string name="number_1">1.</string>
    <string name="number_2">2.</string>
</resources>