<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/helppage_background_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:helphub="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/HelpPageLayoutBase">
        <TextView android:id="@id/help_list_item_number_1_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/desc_text_area_margin_top" android:text="@string/number_1" style="@style/HelpItemNumberText" />
        <com.sec.android.app.camera.help.HelpHubTextView android:id="@id/help_list_item_1_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/desc_text_area_margin_top" android:text="@string/help_recording_videos_tip_1" android:contentDescription="@string/help_recording_videos_tip_1_tts" android:layout_toEndOf="@id/help_list_item_number_1_1" helphub:image="@drawable/help_ic_record" style="@style/HelpItemDescText" />
        <TextView android:id="@id/help_list_item_number_1_2" android:paddingBottom="@dimen/helppage_tipbox_margin_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/number_2" android:layout_below="@id/help_list_item_1_1" style="@style/HelpItemNumberText" />
        <com.sec.android.app.camera.help.HelpHubTextView android:id="@id/help_list_item_1_2" android:paddingBottom="@dimen/helppage_tipbox_margin_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_recording_videos_tip_2" android:layout_below="@id/help_list_item_1_1" android:contentDescription="@string/help_recording_videos_tip_2_tts" android:layout_toEndOf="@id/help_list_item_number_1_2" helphub:image="@drawable/help_ic_stop" style="@style/HelpItemDescText" />
        <RelativeLayout android:orientation="vertical" android:id="@id/tip_box_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/helppage_tipbox_margin_bottom" android:layout_below="@id/help_list_item_1_2" style="@style/HelpPageTipBoxLayout">
            <TextView android:id="@id/more_info_title_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_text_more_info" style="@style/HelpPageTipBoxTitle" />
            <com.sec.android.app.camera.help.HelpHubTextView android:id="@id/more_info_text_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_recording_videos_tip_snapshot" android:layout_below="@id/more_info_title_1" android:contentDescription="@string/help_recording_videos_tip_snapshot_tts" helphub:image="@drawable/help_ic_capture" style="@style/HelpPageTipBoxDescText" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>