<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/helppage_background_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/HelpPageLayoutBase">
        <RelativeLayout android:orientation="horizontal" android:id="@id/help_page_title_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/help_page_title_1" android:layout_width="wrap_content" android:layout_height="@dimen/helppage_title_height" android:layout_marginLeft="@dimen/helppage_title_divider_margin" android:layout_marginTop="@dimen/helppage_title_margin_top" android:layout_marginRight="@dimen/helppage_title_divider_margin" android:layout_marginBottom="@dimen/helppage_title_margin_bottom" android:text="@string/help_selecting_camera_mode" android:layout_centerInParent="true" style="@style/HelpPageTitle" />
            <View android:layout_width="fill_parent" android:layout_centerVertical="true" android:layout_toStartOf="@id/help_page_title_1" style="@style/HelpPageTitleDivider" />
            <View android:layout_width="fill_parent" android:layout_centerVertical="true" android:layout_toEndOf="@id/help_page_title_1" style="@style/HelpPageTitleDivider" />
        </RelativeLayout>
        <ImageView android:layout_gravity="center" android:id="@id/image_1" android:layout_width="@dimen/helppage_image_width" android:layout_marginBottom="@dimen/helppage_image_margin_bottom" android:src="@drawable/help_mode_img" android:layout_below="@id/help_page_title_layout" android:contentDescription="@null" style="@style/HelpItemImage" />
        <TextView android:id="@id/help_list_item_number_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/number_1" android:layout_below="@id/image_1" style="@style/HelpItemNumberText" />
        <TextView android:id="@id/help_list_item_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_change_mode_tip_1" android:layout_below="@id/image_1" android:layout_toEndOf="@id/help_list_item_number_1" style="@style/HelpItemDescText" />
        <TextView android:id="@id/help_list_item_number_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/number_2" android:layout_below="@id/help_list_item_1" style="@style/HelpItemNumberText" />
        <TextView android:id="@id/help_list_item_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_change_mode_tip_2" android:layout_below="@id/help_list_item_1" android:layout_toEndOf="@id/help_list_item_number_2" style="@style/HelpItemDescText" />
    </RelativeLayout>
</ScrollView>